src/objects/Root_Cause_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>All_Other_Responses__c</fullName>
        <label>All Other Responses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Analysis__c</fullName>
        <label>Date of Analysis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eighth_Response__c</fullName>
        <label>Eighth Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fifth_Response__c</fullName>
        <label>Fifth Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Response__c</fullName>
        <label>First Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_Response__c</fullName>
        <label>Fourth Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ninth_Response__c</fullName>
        <label>Ninth Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Responses__c</fullName>
        <label>Number of Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <referenceTo>Risk__c</referenceTo>
        <relationshipLabel>Root Cause Analysis</relationshipLabel>
        <relationshipName>Root_Cause_Analysis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Second_Response__c</fullName>
        <label>Second Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Seventh_Response__c</fullName>
        <label>Seventh Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sixth_Response__c</fullName>
        <label>Sixth Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tenth_Response__c</fullName>
        <label>Tenth Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Response__c</fullName>
        <label>Third Response</label>
        <type>TextArea</type>
    </fields>
    <label>Root Cause Analysis</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Risk__c</columns>
        <columns>Number_of_Responses__c</columns>
        <columns>First_Response__c</columns>
        <columns>Second_Response__c</columns>
        <columns>Third_Response__c</columns>
        <columns>Fourth_Response__c</columns>
        <columns>Fifth_Response__c</columns>
        <columns>Date_of_Analysis__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RCA{00000}</displayFormat>
        <label>Root Cause Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Root Cause Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>